@@ -1,56 +1,152 @@
 package dev.emi.emi.config;
 
+import java.util.List;
+
+import net.xylose.emi.REMIForge;
+import org.lwjgl.glfw.GLFW;
+
+import dev.emi.emi.com.unascribed.qdcss.QDCSS;
 import dev.emi.emi.config.EmiConfig.Comment;
 import dev.emi.emi.config.EmiConfig.ConfigGroup;
 import dev.emi.emi.config.EmiConfig.ConfigValue;
 import dev.emi.emi.input.EmiBind;
 import dev.emi.emi.input.EmiInput;
-import dev.emi.emi.com.unascribed.QDCSS;
+import net.minecraft.client.Minecraft;
 import net.minecraft.client.util.InputUtil;
-import org.lwjgl.glfw.GLFW;
-
-import java.util.Collections;
-import java.util.List;
 
 public class ConfigPresets {
 
 	// Sidebars
 
 	@ConfigGroup("presets.sidebars")
+	@Comment("Index on the right, a smaller set of craftables on the left, and favorites in the top left."
+		+ " Ideal for getting the most out of EMI's features")
+	@ConfigValue("presets.productive")
+	public static Runnable productive = () -> {
+		setPages(EmiConfig.rightSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.INDEX)
+		));
+
+		setPages(EmiConfig.leftSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.CRAFTABLES)
+		));
+
+		setPages(EmiConfig.topSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.FAVORITES)
+		));
+
+		setPages(EmiConfig.bottomSidebarPages, com.rewindmc.retroemi.shim.java.List.of());
+
+		EmiConfig.leftSidebarTheme = SidebarTheme.MODERN;
+		EmiConfig.leftSidebarHeader = HeaderType.VISIBLE;
+
+		Minecraft client = Minecraft.getMinecraft();
+		if (REMIForge.getScaledHeight(client) < 260) {
+			EmiConfig.leftSidebarSize.values.set(0, 10);
+			EmiConfig.leftSidebarSize.values.set(1, 8);
+		} else {
+			EmiConfig.leftSidebarSize.values.set(0, 10);
+			EmiConfig.leftSidebarSize.values.set(1, 10);
+		}
+
+		EmiConfig.leftSidebarAlign = new ScreenAlign(
+			ScreenAlign.Horizontal.RIGHT,
+			ScreenAlign.Vertical.CENTER
+		);
+
+		EmiConfig.rightSidebarTheme = SidebarTheme.MODERN;
+		EmiConfig.rightSidebarHeader = HeaderType.VISIBLE;
+
+		EmiConfig.rightSidebarSize.values.set(0, 12);
+		EmiConfig.rightSidebarSize.values.set(1, 100);
+
+		EmiConfig.rightSidebarAlign = new ScreenAlign(
+			ScreenAlign.Horizontal.RIGHT,
+			ScreenAlign.Vertical.TOP
+		);
+
+		EmiConfig.topSidebarTheme = SidebarTheme.TRANSPARENT;
+		EmiConfig.topSidebarHeader = HeaderType.INVISIBLE;
+
+		EmiConfig.topSidebarSize.values.set(0, 12);
+		EmiConfig.topSidebarSize.values.set(1, 4);
+
+		EmiConfig.topSidebarAlign = new ScreenAlign(
+			ScreenAlign.Horizontal.LEFT,
+			ScreenAlign.Vertical.TOP
+		);
+	};
+
+	@Comment("Use a smaller, recipe book styled panel on the left for craftables and favorites,"
+		+ " and use a classic index on the right.")
+	@ConfigValue("presets.recipe-book-plus")
+	public static Runnable recipeBookPlus = () -> {
+		setPages(EmiConfig.rightSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.INDEX)
+		));
+
+		setPages(EmiConfig.leftSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.CRAFTABLES),
+			new SidebarPages.SidebarPage(SidebarType.FAVORITES)
+		));
+
+		setPages(EmiConfig.topSidebarPages, com.rewindmc.retroemi.shim.java.List.of());
+
+		setPages(EmiConfig.bottomSidebarPages, com.rewindmc.retroemi.shim.java.List.of());
+
+		EmiConfig.leftSidebarTheme = SidebarTheme.VANILLA;
+		EmiConfig.leftSidebarHeader = HeaderType.VISIBLE;
+
+		EmiConfig.leftSidebarSize.values.set(0, 8);
+		EmiConfig.leftSidebarSize.values.set(1, 7);
+
+		EmiConfig.leftSidebarAlign = new ScreenAlign(
+			ScreenAlign.Horizontal.RIGHT,
+			ScreenAlign.Vertical.CENTER
+		);
+
+		EmiConfig.rightSidebarTheme = SidebarTheme.MODERN;
+		EmiConfig.rightSidebarHeader = HeaderType.VISIBLE;
+
+		EmiConfig.rightSidebarSize.values.set(0, 12);
+		EmiConfig.rightSidebarSize.values.set(1, 100);
+
+		EmiConfig.rightSidebarAlign = new ScreenAlign(
+			ScreenAlign.Horizontal.RIGHT,
+			ScreenAlign.Vertical.TOP
+		);
+	};
+
+	@Comment("Use the right sidebar as the index, but only while searching")
+	@ConfigValue("presets.low-distraction")
+	public static Runnable lowDistraction = () -> {
+		EmiConfig.searchSidebarFocus = SidebarType.INDEX;
+		EmiConfig.emptySearchSidebarFocus = SidebarType.EMPTY;
+
+		setPages(EmiConfig.rightSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.INDEX),
+			new SidebarPages.SidebarPage(SidebarType.EMPTY)
+		));
+	};
+
 	@Comment("Use index and craftables on the right panel, craftable by default, and index when searching")
 	@ConfigValue("presets.empty-search-craftable")
 	public static Runnable emptySearchCraftable = () -> {
 		EmiConfig.searchSidebarFocus = SidebarType.INDEX;
 		EmiConfig.emptySearchSidebarFocus = SidebarType.CRAFTABLES;
 
-		setPages(EmiConfig.rightSidebarPages, com.rewindmc.retroemi.shim.java.List.of((new SidebarPages.SidebarPage(SidebarType.INDEX)), new SidebarPages.SidebarPage(SidebarType.CRAFTABLES)));
+		setPages(EmiConfig.rightSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.INDEX),
+			new SidebarPages.SidebarPage(SidebarType.CRAFTABLES)
+		));
 
-		setPages(EmiConfig.leftSidebarPages, Collections.singletonList(new SidebarPages.SidebarPage(SidebarType.FAVORITES)));
-	};
+		setPages(EmiConfig.leftSidebarPages, com.rewindmc.retroemi.shim.java.List.of(
+			new SidebarPages.SidebarPage(SidebarType.FAVORITES)
+		));
 
-	@Comment("Use a smaller, recipe book styled panel on the left for craftables and favorites," + " and use a classic index on the right.")
-	@ConfigValue("presets.recipe-book-plus")
-	public static Runnable recipeBookPlus = () -> {
-		setPages(EmiConfig.rightSidebarPages, Collections.singletonList(new SidebarPages.SidebarPage(SidebarType.INDEX)));
+		setPages(EmiConfig.topSidebarPages, com.rewindmc.retroemi.shim.java.List.of());
 
-		setPages(EmiConfig.leftSidebarPages,
-				com.rewindmc.retroemi.shim.java.List.of((new SidebarPages.SidebarPage(SidebarType.CRAFTABLES)), new SidebarPages.SidebarPage(SidebarType.FAVORITES)));
-
-		EmiConfig.leftSidebarTheme = SidebarTheme.VANILLA;
-		EmiConfig.leftSidebarHeader = HeaderType.VISIBLE;
-
-		EmiConfig.leftSidebarSize.values.set(0, 8);
-		EmiConfig.leftSidebarSize.values.set(0, 7);
-
-		EmiConfig.leftSidebarAlign = new ScreenAlign(ScreenAlign.Horizontal.RIGHT, ScreenAlign.Vertical.CENTER);
-
-		EmiConfig.rightSidebarTheme = SidebarTheme.MODERN;
-		EmiConfig.leftSidebarHeader = HeaderType.VISIBLE;
-
-		EmiConfig.rightSidebarSize.values.set(0, 12);
-		EmiConfig.rightSidebarSize.values.set(0, 100);
-
-		EmiConfig.rightSidebarAlign = new ScreenAlign(ScreenAlign.Horizontal.RIGHT, ScreenAlign.Vertical.TOP);
+		setPages(EmiConfig.bottomSidebarPages, com.rewindmc.retroemi.shim.java.List.of());
 	};
 
 	// Binds
@@ -59,19 +155,31 @@ public class ConfigPresets {
 	@Comment("Use some of the binds EMI's author uses, do they know best?")
 	@ConfigValue("presets.author-binds")
 	public static Runnable authorBinds = () -> {
-		EmiConfig.toggleVisibility.setBinds(EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_O, EmiInput.CONTROL_MASK));
-		EmiConfig.focusSearch.setBinds(EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_F, EmiInput.CONTROL_MASK));
-		EmiConfig.clearSearch.setBinds(EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_D, EmiInput.CONTROL_MASK));
+		EmiConfig.toggleVisibility.setBinds(
+			EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_O, EmiInput.CONTROL_MASK)
+		);
+		EmiConfig.focusSearch.setBinds(
+			EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_F, EmiInput.CONTROL_MASK)
+		);
+		EmiConfig.clearSearch.setBinds(
+			EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_D, EmiInput.CONTROL_MASK)
+		);
 		EmiConfig.viewRecipes.setToDefault();
 		EmiConfig.viewUses.setToDefault();
 		EmiConfig.favorite.setToDefault();
 		EmiConfig.viewStackTree.setToDefault();
-		EmiConfig.viewTree.setBinds(EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_C, 0));
+		EmiConfig.viewTree.setBinds(
+			EmiBind.ModifiedKey.of(GLFW.GLFW_KEY_C, 0)
+		);
 		EmiConfig.back.setToDefault();
 		EmiConfig.craftOne.setToDefault();
 		EmiConfig.craftAll.setBinds();
-		EmiConfig.craftOneToInventory.setBinds(new EmiBind.ModifiedKey(InputUtil.Type.MOUSE.createFromCode(1), EmiInput.SHIFT_MASK));
-		EmiConfig.craftAllToInventory.setBinds(new EmiBind.ModifiedKey(InputUtil.Type.MOUSE.createFromCode(0), EmiInput.SHIFT_MASK));
+		EmiConfig.craftOneToInventory.setBinds(
+			new EmiBind.ModifiedKey(InputUtil.Type.MOUSE.createFromCode(1), EmiInput.SHIFT_MASK)
+		);
+		EmiConfig.craftAllToInventory.setBinds(
+			new EmiBind.ModifiedKey(InputUtil.Type.MOUSE.createFromCode(0), EmiInput.SHIFT_MASK)
+		);
 		EmiConfig.showCraft.setToDefault();
 		EmiConfig.cheatOneToInventory.setToDefault();
 		EmiConfig.cheatStackToInventory.setToDefault();
